--- a/storybook2/historia2.html
+++ b/storybook2/historia2.html
@@ -34,6 +34,7 @@
     <!-- El contenido de la página se inserta aquí por JS -->
   </div>
   <div class="storybook-btns">
+    <button class="storybook-btn" id="home-btn">Home</button>
     <button class="storybook-btn" id="prev-btn">Anterior</button>
     <button class="storybook-btn" id="next-btn">Siguiente</button>
   </div>
@@ -163,6 +164,10 @@ document.getElementById('prev-btn').onclick = () => {
 };
 document.getElementById('next-btn').onclick = () => {
   if (currentPage < pages.length - 1) goToPage(currentPage + 1);
+};
+
+document.getElementById('home-btn').onclick = () => {
+  window.location.href = '../index.html';
 };
 
 // Inicializa
