--- a/recursos.html
+++ b/recursos.html
@@ -116,8 +116,8 @@
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
                 <p class="text-gray-700 mb-6">En esta sección se presentan historietas relacionadas con problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
-                    <li><a href="storybook1/historia1.html" class="text-[#00796B] hover:underline"> Olivia en la tierra de la optimización</a> - Olivia en la tierra de la optimización.</li>
-                    <li><a href="storybook2/historia2.html" class="text-[#00796B] hover:underline"> Olivia y el festival de las soluciones brillantes </a> - Olivia y el festival de las soluciones brillantes. </li>                    
+                    <li><a href="sb/sb1/olivia1.html" class="text-[#00796B] hover:underline"> Olivia en la tierra de la optimización</a> - Olivia en la tierra de la optimización.</li>
+                    <li><a href="sb/sb2/olivia2.html" class="text-[#00796B] hover:underline"> Olivia y el festival de las soluciones brillantes </a> - Olivia y el festival de las soluciones brillantes. </li>                    
                 </ul>
             </div>
         </section>
