--- a/sb/sb1/olivia1.html
+++ b/sb/sb1/olivia1.html
@@ -324,7 +324,7 @@ document.getElementById('next-btn').onclick = () => {
 };
 
 document.getElementById('home-btn').onclick = () => {
-  window.location.href = '../index.html';
+  window.location.href = '../../index.html';
 };
 
 // Inicializa
