--- a/sb/sb2/olivia2.html
+++ b/sb/sb2/olivia2.html
@@ -167,7 +167,7 @@ document.getElementById('next-btn').onclick = () => {
 };
 
 document.getElementById('home-btn').onclick = () => {
-  window.location.href = '../index.html';
+  window.location.href = '../../index.html';
 };
 
 // Inicializa
