--- a/recursos.html
+++ b/recursos.html
@@ -101,11 +101,12 @@
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
                 <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
-                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
-                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
-                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Simulador Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos.</li>
-                    <li><a href="simulador/UAFLP.html" class="text-[#00796B] hover:underline">Simulador Unequal Area Facility Layout Problem </a> - Simulación de un problema de ubicación de instalaciones.</li>
-                    <li><a href="simulador/SSMZ.html" class="text-[#00796B] hover:underline">Simulador Site Specific Management Zone Problem</a> - Simulación de un problema de partición de zonas con restricciones.</li>                    
+                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Knapsack Problem </a> - Simulación del problema de la mochila.</li>
+                    <li><a href="simulador/SSP_GA.html" class="text-[#00796B] hover:underline">Shortest path problem </a> - Simulación del problema de la ruta más corta.</li>
+                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Scheduling Problem </a> - Simulación de un problema de planificación de la producción.</li>
+                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos con ventanas de tiempo.</li>
+                    <li><a href="simulador/UAFLP.html" class="text-[#00796B] hover:underline">Unequal Area Facility Layout Problem </a> - Simulación de un problema de ubicación de instalaciones.</li>
+                    <li><a href="simulador/SSMZ.html" class="text-[#00796B] hover:underline">Site Specific Management Zone Problem</a> - Simulación de un problema de partición de zonas con restricción de homogeneidad.</li>                    
                 </ul>
             </div>
         </section>
