--- a/recursos.html
+++ b/recursos.html
@@ -102,7 +102,8 @@
                 <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
                     <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Knapsack Problem </a> - Simulación del problema de la mochila.</li>
-                    <li><a href="simulador/BP_GA.html" class="text-[#00796B] hover:underline">Bin Packing </a> - Desafío de contenedores: optimiza el espacio.</li>                    
+                    <li><a href="simulador/BP_GA.html" class="text-[#00796B] hover:underline">Bin Packing </a> - Desafío de contenedores: optimiza el espacio.</li>     
+                    <li><a href="simulador/SC_GA.html" class="text-[#00796B] hover:underline">Set Covering </a> - El desafío del vigilante de la galería.</li>     
                     <li><a href="simulador/SPP_GA.html" class="text-[#00796B] hover:underline">Shortest path problem </a> - Simulación del problema de la ruta más corta.</li>
                     <li><a href="simulador/CPP_A.html" class="text-[#00796B] hover:underline">Chinese postman problem </a> - Simulación del problema del cartero chino.</li>
                     <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Scheduling Problem </a> - Simulación de un problema de planificación de la producción.</li>
