cambio de textos recursos

--- a/simulador/CPP_A.html
+++ b/simulador/CPP_A.html
@@ -109,8 +109,8 @@
     
     
         <header class="text-center mb-8 pt-16">
-            <h1 class="text-4xl md:text-5xl font-bold text-slate-800">El problema del cartero chino</h1>
-            <p class="text-lg text-slate-500 mt-3">Encuentra el tour de menor costo que recorra todas las calles (aristas).</p>
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-800">Ayuda al cartero chino a recorrer las calles</h1>
+            <p class="text-lg text-slate-500 mt-3">Encuentra el recorrido de menor costo que recorra todas las calles (aristas).</p>
         </header>
 
         <!-- Panel de Instrucciones y Explicación -->
