--- a/simulador/SPP_GA.html
+++ b/simulador/SPP_GA.html
@@ -116,7 +116,7 @@
 </div>
 
         <header class="text-center mb-8 pt-16">
-            <h1 class="text-4xl md:text-5xl font-bold text-slate-800">La ruta más corta</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-800">Encuentra la ruta más corta</h1>
             <p class="text-lg text-slate-500 mt-3">Encuentra la ruta de menor costo del origen (verde) al destino (rojo).</p>
         </header>
 
