--- a/simulador/SSMZ.html
+++ b/simulador/SSMZ.html
@@ -142,7 +142,7 @@
 </div> 
 
         <header class="text-center mb-8 pt-16">
-            <h1 class="text-4xl font-bold text-gray-800">Partición de zonas</h1>
+            <h1 class="text-4xl font-bold text-gray-800">Crea particiones de zonas homogéneas y conexas</h1>
             <p class="text-lg text-gray-600 mt-2">Colorea las celdas para crear zonas homogéneas y conexas. Luego, desafía a las heurísticas glotonas.</p>
         </header>
 
