--- a/recursos.html
+++ b/recursos.html
@@ -101,15 +101,15 @@
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
                 <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
-                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Knapsack Problem </a> - Simulación del problema de la mochila.</li>
+                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Knapsack Problem </a> - Empaca y vence: tu ingenio vs. la evolución algorítmica.</li>
                     <li><a href="simulador/BP_GA.html" class="text-[#00796B] hover:underline">Bin Packing </a> - Desafío de contenedores: optimiza el espacio.</li>     
                     <li><a href="simulador/SC_GA.html" class="text-[#00796B] hover:underline">Set Covering </a> - El desafío del vigilante de la galería.</li>     
-                    <li><a href="simulador/SPP_GA.html" class="text-[#00796B] hover:underline">Shortest path problem </a> - Simulación del problema de la ruta más corta.</li>
-                    <li><a href="simulador/CPP_A.html" class="text-[#00796B] hover:underline">Chinese postman problem </a> - Simulación del problema del cartero chino.</li>
-                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Scheduling Problem </a> - Simulación de un problema de planificación de la producción.</li>
-                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos con ventanas de tiempo.</li>
-                    <li><a href="simulador/UAFLP.html" class="text-[#00796B] hover:underline">Unequal Area Facility Layout Problem </a> - Simulación de un problema de ubicación de instalaciones.</li>
-                    <li><a href="simulador/SSMZ.html" class="text-[#00796B] hover:underline">Site Specific Management Zone Problem</a> - Simulación de un problema de partición de zonas con restricción de homogeneidad.</li>                    
+                    <li><a href="simulador/SPP_GA.html" class="text-[#00796B] hover:underline">Shortest path problem </a> - Encuentra la ruta más corta.</li>
+                    <li><a href="simulador/CPP_A.html" class="text-[#00796B] hover:underline">Chinese postman problem </a> - Ayuda al cartero chino a recorrer las calles</li>
+                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Scheduling Problem </a> - Planifica la producción. </li>
+                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Vehicle Routing Problem </a> - Planifica las rutas de los vehículos.</li>
+                    <li><a href="simulador/UAFLP.html" class="text-[#00796B] hover:underline">Unequal Area Facility Layout Problem </a> - Ayuda a ubicar los departamentos dentro de una planta.</li>
+                    <li><a href="simulador/SSMZ.html" class="text-[#00796B] hover:underline">Site Specific Management Zone Problem</a> - Crea particiones de zonas homogéneas y conexas.</li>                    
                 </ul>
             </div>
         </section>
