--- a/simulador/UAFLP.html
+++ b/simulador/UAFLP.html
@@ -121,7 +121,7 @@
     
     
         <header class="text-center mb-8 pt-16">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Distribución de planta (UA-FLP)</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Ayuda a ubicar los departamentos dentro de una planta</h1>
             <p class="text-lg text-gray-600 mt-2">Arrastra, suelta y rota los departamentos. Luego, desafía al algoritmo de IA.</p>
         </header>
 
