--- a/index.html
+++ b/index.html
@@ -127,14 +127,22 @@
                 <div>
                     <h2 class="text-2xl font-bold text-center mb-6 text-[#004D40]">Publicaciones recientes</h2>
                     <div class="space-y-4">
-                        <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
+                    <!--     <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
                             <h3 class="font-bold text-md text-[#00796B]">Título de la Publicación o Artículo 1</h3>
                             <p class="text-gray-600 text-sm italic">A. Apellido1, B. Apellido2, **[Tu Nombre]** (Año)</p>
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
                             <h3 class="font-bold text-md text-[#00796B]">Título de la Publicación o Artículo 2</h3>
                             <p class="text-gray-600 text-sm italic">C. Apellido3, **[Tu Nombre]**, D. Apellido4 (Año)</p>
+                        </div>-->
+                        <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
+                            <h3 class="font-bold text-md text-[#00796B]">MaSchedule. A multi-agent tool for scheduling problems</h3>
+                            <p class="text-gray-600 text-sm italic">Trejo-Sánchez, J. A., Sansores, C. E., Hernández-López, F. J., **Velasco, J.**, Fajardo Delgado, D., López-Martinez, J.L., Ramirez-Pacheco J. C. (2025)</p>
                         </div>
+                        <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
+                            <h3 class="font-bold text-md text-[#00796B]">A mixed integer nonlinear programming model for site-specific management zone problem.</h3>
+                            <p class="text-gray-600 text-sm italic">Urban-Rivero, L. E., Velasco, J. (2025)</p>
+                        </div>-->                        
                     </div>
                     <div class="text-center mt-6">
                         <a href="publicaciones.html" class="text-[#00796B] hover:underline font-semibold">Ver todas las publicaciones &rarr;</a>
