--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                         </div>-->
                         <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
                             <h3 class="font-bold text-md text-[#00796B]">MaSchedule. A multi-agent tool for scheduling problems</h3>
-                            <p class="text-gray-600 text-sm italic">Trejo-Sánchez, J. A., Sansores, C. E., Hernández-López, F. J., **Velasco, J.**, Fajardo Delgado, D., López-Martinez, J.L., Ramirez-Pacheco J. C. (2025)</p>
+                            <p class="text-gray-600 text-sm italic">Trejo-Sánchez, J. A., Sansores, C. E., Hernández-López, F. J., <strong>Velasco, J.</strong>, Fajardo Delgado, D., López-Martinez, J.L., Ramirez-Pacheco J. C. (2025)</p>
                         </div>
                         <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
                             <h3 class="font-bold text-md text-[#00796B]">A mixed integer nonlinear programming model for site-specific management zone problem.</h3>
-                            <p class="text-gray-600 text-sm italic">Urban-Rivero, L. E., Velasco, J. (2025)</p>
+                            <p class="text-gray-600 text-sm italic">Urban-Rivero, L. E., <strong>Velasco, J.</strong> (2025)</p>
                         </div>-->                        
                     </div>
                     <div class="text-center mt-6">
