--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="bg-white p-4 rounded-lg shadow-sm border border-gray-200">
                             <h3 class="font-bold text-md text-[#00796B]">A mixed integer nonlinear programming model for site-specific management zone problem.</h3>
                             <p class="text-gray-600 text-sm italic">Urban-Rivero, L. E., <strong>Velasco, J.</strong> (2025)</p>
-                        </div>-->                        
+                        </div>                        
                     </div>
                     <div class="text-center mt-6">
                         <a href="publicaciones.html" class="text-[#00796B] hover:underline font-semibold">Ver todas las publicaciones &rarr;</a>
