Cambios generales de la pagina2

--- a/recursos/investigacion-operaciones.html
+++ b/recursos/investigacion-operaciones.html
@@ -398,6 +398,25 @@
             </div>
         </section>
 
+            <!-- Botón de Donación -->
+            <div class="text-center mt-12">
+                <h3 class="text-2xl font-semibold mb-4">¿Te gusta lo que hago?</h3>
+                <!-- 
+                  IMPORTANTE: Reemplaza el '#' con el enlace a tu página de Buy Me a Coffee, Ko-fi o PayPal.
+                  Ejemplo: href="https://www.buymeacoffee.com/tunombredeusuario"
+                -->
+                <a 
+                    href="https://buymeacoffee.com/jvelascoal" 
+                    target="_blank" 
+                    rel="noopener noreferrer"
+                    class="btn-donate inline-flex items-center gap-3 bg-yellow-400 text-gray-900 font-bold py-4 px-8 rounded-xl shadow-lg transition-all duration-300 ease-in-out"
+                >
+                    <i class="ph-fill ph-coffee text-2xl"></i>
+                    <span>Invítame un café</span>
+                </a>
+                <p class="text-gray-500 mt-4 text-sm">Tu apoyo es muy apreciado ❤️</p>
+            </div>
+
  
     </main>
 
