--- a/proyectos/movilidad-sustentable.html
+++ b/proyectos/movilidad-sustentable.html
@@ -288,12 +288,14 @@
                     <h3 class="text-xl font-bold text-[#004D40] mb-4">Publicaciones</h3>
                     <div class="space-y-3">
                         <div class="border-l-4 border-[#00796B] pl-3">
-                            <p class="text-sm font-medium text-[#004D40]">Sustainable Urban Mobility</p>
-                            <p class="text-xs text-gray-600">Transportation Research (2024)</p>
+                          <!--  <p class="text-sm font-medium text-[#004D40]">Sustainable Urban Mobility</p>-->
+                          <!--  <p class="text-xs text-gray-600">Transportation Research (2024)</p>-->
+                          <p class="text-xs text-gray-600">En proceso.</p>
                         </div>
                         <div class="border-l-4 border-[#00796B] pl-3">
-                            <p class="text-sm font-medium text-[#004D40]">Electric Vehicle Routing</p>
-                            <p class="text-xs text-gray-600">Computers & OR (2023)</p>
+                            <!-- <p class="text-sm font-medium text-[#004D40]">Electric Vehicle Routing</p>-->
+                           <!--  <p class="text-xs text-gray-600">Computers & OR (2023)</p>-->
+                            <p class="text-xs text-gray-600">En proceso.</p>
                         </div>
                     </div>
                 </div>
@@ -302,29 +304,12 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[#004D40] text-white py-8 mt-16">
-        <div class="container mx-auto px-4">
-            <div class="grid md:grid-cols-3 gap-8">
-                <div>
-                    <h3 class="text-lg font-bold mb-4">Dr. Jonás Velasco</h3>
-                    <p class="text-sm text-gray-300">Investigación de Operaciones y Optimización</p>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-3">Contacto</h4>
-                    <p class="text-sm text-gray-300">Universidad Autónoma de Nuevo León</p>
-                    <p class="text-sm text-gray-300">Facultad de Ingeniería Mecánica y Eléctrica</p>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-3">Enlaces</h4>
-                    <div class="space-y-2">
-                        <a href="../publicaciones.html" class="block text-sm text-gray-300 hover:text-white">Publicaciones</a>
-                        <a href="../proyectos.html" class="block text-sm text-gray-300 hover:text-white">Proyectos</a>
-                        <a href="../contacto.html" class="block text-sm text-gray-300 hover:text-white">Contacto</a>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-gray-600 mt-8 pt-8 text-center">
-                <p class="text-sm text-gray-400">&copy; 2025 Dr. Jonás Velasco. Todos los derechos reservados.</p>
+    <footer class="bg-[#333333] text-white">
+        <div class="container mx-auto px-6 py-10">
+            <div class="text-center">
+                <p class="text-gray-300 mb-2">Si tienes alguna pregunta o te gustaría colaborar, no dudes en escribirme.</p>
+                <a href="../contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
+                <p class="text-gray-500 mt-8 text-sm">&copy; 2025 Jonás Velasco. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
