--- a/proyectos/movilidad-sustentable.html
+++ b/proyectos/movilidad-sustentable.html
@@ -291,6 +291,16 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Back to Projects -->
+        <div class="text-center">
+            <a href="../proyectos.html" class="inline-flex items-center px-6 py-3 bg-[#00796B] text-white rounded-lg hover:bg-[#004D40] transition-colors">
+                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                </svg>
+                Volver a Proyectos
+            </a>
+        </div>
     </main>
 
     <!-- Footer -->
