--- a/proyectos/movilidad-sustentable.html
+++ b/proyectos/movilidad-sustentable.html
@@ -292,6 +292,7 @@
             </div>
         </div>
         
+                 <section class="bg-white rounded-lg shadow-md p-6">       
         <!-- Back to Projects -->
         <div class="text-center">
             <a href="../proyectos.html" class="inline-flex items-center px-6 py-3 bg-[#00796B] text-white rounded-lg hover:bg-[#004D40] transition-colors">
@@ -301,6 +302,8 @@
                 Volver a Proyectos
             </a>
         </div>
+        </section>
+        
     </main>
 
     <!-- Footer -->
