Cambios en movilidad5

--- a/proyectos/movilidad-sustentable.html
+++ b/proyectos/movilidad-sustentable.html
@@ -292,7 +292,7 @@
             </div>
         </div>
         
-                 <section class="bg-white rounded-lg shadow-md p-6">       
+       <section class="p-11">       
         <!-- Back to Projects -->
         <div class="text-center">
             <a href="../proyectos.html" class="inline-flex items-center px-6 py-3 bg-[#00796B] text-white rounded-lg hover:bg-[#004D40] transition-colors">
