--- a/proyectos.html
+++ b/proyectos.html
@@ -140,7 +140,7 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project Card 1: Zonificación Agrícola -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/4CAF50/FFFFFF?text=Zonificaci%C3%B3n+Agr%C3%ADcola" alt="Zonificación Agrícola" class="w-full h-48 object-cover">
+                    <img src="img/p1.png" alt="Zonificación Agrícola" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2 text-[#004D40]">Zonificación Agrícola</h3>
                         <p class="text-gray-700 text-sm mb-4">Desarrollo de modelos de programación entera mixta no lineal para la optimización de zonas de manejo específico por sitio, mejorando la eficiencia en la producción agrícola mediante técnicas avanzadas de investigación de operaciones.</p>
@@ -149,7 +149,7 @@
                 </div>
                 <!-- Project Card 2: Problemas de Ruteo -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/FF9800/FFFFFF?text=Problemas+de+Ruteo" alt="Problemas de Ruteo" class="w-full h-48 object-cover">
+                    <img src="img/p2.png" alt="Problemas de Ruteo" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2 text-[#004D40]">Problemas de Ruteo</h3>
                         <p class="text-gray-700 text-sm mb-4">Investigación en optimización de rutas vehiculares aplicando algoritmos genéticos y metaheurísticas para resolver problemas complejos de distribución y logística en tiempo real con múltiples restricciones operacionales.</p>
@@ -158,7 +158,7 @@
                 </div>
                 <!-- Project Card 3: Movilidad Sustentable -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/2196F3/FFFFFF?text=Movilidad+Sustentable" alt="Movilidad Sustentable" class="w-full h-48 object-cover">
+                    <img src="img/p3.png" alt="Movilidad Sustentable" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2 text-[#004D40]">Movilidad Sustentable</h3>
                         <p class="text-gray-700 text-sm mb-4">Modelos y algoritmos de optimización para sistemas de transporte urbano sustentable, enfocados en la reducción de emisiones y optimización energética como parte del Pronaces "Energía y cambio climático".</p>
