--- a/proyectos/ruteo.html
+++ b/proyectos/ruteo.html
@@ -137,7 +137,7 @@
             </div>
             
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="https://placehold.co/1200x400/FF9800/FFFFFF?text=Problemas+de+Ruteo" alt="Problemas de Ruteo" class="w-full h-64 object-cover">
+                <img src="img/p2.png" alt="Problemas de Ruteo" class="w-full h-64 object-cover">
             </div>
         </section>
 
