--- a/proyectos/zonificacion-agricola.html
+++ b/proyectos/zonificacion-agricola.html
@@ -137,7 +137,7 @@
             </div>
             
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="img/p1.png" alt="Zonificación Agrícola" class="w-full h-64 object-cover">
+                <img src="../img/p1.png" alt="Zonificación Agrícola" class="w-full h-64 object-cover">
             </div>
         </section>
 
